--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.show-sql=false
