--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/users
+#spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.url=jdbc:mysql://localhost:3306/users?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+
 spring.datasource.username=root
 spring.datasource.password=root
 
