--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/users
-spring.datasource.url=jdbc:mysql://localhost:3306/users?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/ppl
+spring.datasource.url=jdbc:mysql://localhost:3306/ppl?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
-#spring.jpa.properties.hibernate.format_sql=create
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=false
